; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/calc/extr_utl_ieee.c_convert_real_integer.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/calc/extr_utl_ieee.c_convert_real_integer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { double, i64 }

@calc = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @convert_real_integer(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %15 [
    i32 130, label %4
    i32 128, label %7
    i32 131, label %7
    i32 129, label %7
  ]

4:                                                ; preds = %1
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 1), align 8
  %6 = sitofp i64 %5 to double
  store double %6, double* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 0), align 8
  br label %15

7:                                                ; preds = %1, %1, %1
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 0), align 8
  %9 = icmp eq i32 %8, 130
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load double, double* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 0), align 8
  %12 = fptosi double %11 to i64
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1, i32 1), align 8
  %13 = call i32 @apply_int_mask(%struct.TYPE_4__* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @calc, i32 0, i32 1))
  br label %14

14:                                               ; preds = %10, %7
  br label %15

15:                                               ; preds = %1, %14, %4
  ret void
}

declare dso_local i32 @apply_int_mask(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
